“Estructura base del proyecto

--- a/index.html
+++ b/index.html
@@ -1,2 +1,43 @@
+<!DOCTYPE html>
+<html> 
+<head>
+	<title>PracticaGit4A_VillacisPaul</title>
+	
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+</head> 
+
+<body> 
+<div class="container"> 
+	<div class="row">
+		<div class="col-xs-2"> <!-- logo -->
+		LOGO
+		</div> 
+		<div class="col-xs-10"> <!-- navegador -->
+		NAVEGADOR
+		</div>
+	</div>	
+
+	<div class="row">
+		<div class="col-xs-9"> CONTENIDO </div> 
+		<div class="col-xs-3"> NOTICIAS	</div>
+	</div>	
+
+	<div class="row">
+		<div class="col-xs-4"> DIRECCION </div> 
+		<div class="col-xs-4"> MAIL	</div>
+		<div class="col-xs-4"> MENU	</div>
+	</div>	
+
+
+
+
+
+</div>
+
+
+
 
 
